# pile-sm

./: .env.sample  .gitignore  LICENSE  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
docs/: ARCHITECTURE.md  HYBRID_MODEL.md  PRD.md  ROADMAP.md
docs/superpowers/plans/: 2026-04-07-chainlit-streaming-ui.md  2026-04-07-self-contained-inference.md  2026-04-08-session-memory.md
docs/superpowers/specs/: 2026-04-07-chainlit-streaming-ui-design.md  2026-04-07-self-contained-inference-design.md  2026-04-08-session-memory-design.md
public/: theme.css
src/pile/: __init__.py  cache.py  client.py  config.py  context.py  health.py  middleware.py  prefetch.py  router.py
src/pile/agents/: board.py  epic.py  git.py  jira.py  jira_query.py  jira_write.py  scrum.py  sprint.py  triage.py
src/pile/memory/: ingest.py  store.py
src/pile/ui/: cli.py  (+2 more)
tests/: test_cache.py  test_client.py  test_config.py  test_context.py  test_engine.py  test_health.py  test_llm_client.py  test_logging_inference.py  test_manager.py  test_memory_ingest.py  test_memory_store.py  test_middleware.py  test_prefetch.py  test_registry.py  test_router.py  test_store_cleanup.py  test_ui_helpers.py
tests/e2e/: questions.json  runner.py
tests/test_agents/: test_git.py  test_scrum.py  test_triage.py
tests/test_tools/: test_browser_tools.py  test_git_tools.py  test_git_validation.py  test_jira_tools.py  test_memory_tools.py  test_utils.py
tests/test_ui/: test_chainlit_app.py  test_charts.py  test_cli.py
tests/test_workflows/: test_interactive.py  test_planning.py  test_standup.py
(+24 files in other folders)
